# pypika-tortoise

./: CHANGELOG.md  Makefile  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
pypika_tortoise/: __init__.py
tests/: test_poetry_add.py
